# INF2004_Embedded_T68

./: CMakeLists.txt  README.md  htmldata.c  main.c  ssi.h
driver/barcode/: barcode.c  barcode.h
driver/irline/: irline.c  irline.h
driver/magnometer/: README.md  magnometer.c  magnometer.h
driver/mapping/: mapping.c  mapping.h
driver/motor/: README.md  motor.c  motor.h
driver/ultrasonic/: ultrasonic.c  ultrasonic.h
driver/wheelEncoder/: README.md  wheelEncoder.c  wheelEncoder.h
html_files/: index.shtml
